---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 26
  l: "variable \"app_name\" {\n"
  m: "           ^^^^^^^^      "
- n: 32
  l: "variable \"instance_count\" {\n"
  m: "           ^^^^^^^^^^^^^^      "
- n: 38
  l: "variable \"enable_feature_x\" {\n"
  m: "           ^^^^^^^^^^^^^^^^      "
- n: 44
  l: "variable \"admins\" {\n"
  m: "           ^^^^^^      "
- n: 74
  l: "  count         = var.instance_count\n"
  m: "                      ^^^^^^^^^^^^^^  "
- n: 78
  l: "    Name        = \"${var.app_name}-${count.index}\"\n"
  m: "                          ^^^^^^^^                    "
- n: 85
  l: "    for_each = var.enable_feature_x ? [1] : []\n"
  m: "                   ^^^^^^^^^^^^^^^^             "
- n: 89
  l: "echo \"Feature ${upper(var.app_name)} enabled\"\n"
  m: "                           ^^^^^^^^              "
- n: 103
  l: "  value       = join(\", \", var.admins)\n"
  m: "                                 ^^^^^^   "
- n: 114
  l: "  bucket = var.enable_feature_x ? \"${var.app_name}-feature-x\" : \"${var.app_name}\"\n"
  m: "               ^^^^^^^^^^^^^^^^                                                        "
- n: 114
  l: "  bucket = var.enable_feature_x ? \"${var.app_name}-feature-x\" : \"${var.app_name}\"\n"
  m: "                                          ^^^^^^^^                                     "
- n: 114
  l: "  bucket = var.enable_feature_x ? \"${var.app_name}-feature-x\" : \"${var.app_name}\"\n"
  m: "                                                                          ^^^^^^^^     "
- n: 122
  l: "echo \"Application: ${var.app_name}\"\n"
  m: "                          ^^^^^^^^     "
- n: 130
  l: "  name        = \"${var.app_name}-web-sg\"\n"
  m: "                        ^^^^^^^^            "
- n: 131
  l: "  description = \"Web security group for ${var.app_name}\"\n"
  m: "                                               ^^^^^^^^     "
- n: 151
  l: "  name = \"${var.app_name}_role\"\n"
  m: "                 ^^^^^^^^          "
